# train-reservation-ddd

./: README.md  TODO  guiding_test.py  log.txt  mypy.ini  test_end_to_end.py  tests.py
booking_reference/: Dockerfile  booking_reference_service.py  server.py
booking_reference_service/: booking_reference_service.py
python/: client.py  conftest.py  http_client.py  test_http_client.py  test_ticket_office.py  tests.py  ticket_office.py
ticket_office/: .flake8  TODO  client.py  http_client.py  infra.py  main.py  mypy.ini  pyproject.toml  reservation.py  server.py  skyspell-ignore.kdl  ticket_office.py  value_object.py
ticket_office/tests/: conftest.py  helpers.py  test_end_to_end.py  test_helpers.py  test_http_client.py  test_reservation.py  test_ticket_office.py
ticket_office/ticket_office/domain/: client.py  reservation.py  ticket_office.py
ticket_office/ticket_office/infra/: http_client.py  server.py
train_data/: Dockerfile  server.py
