[tool.isort]
profile = "black"

[tool.poetry]
name = "ticket-office"
version = "0.1.0"
description = "Solution for the train reservation kata"
authors = ["Dimitri Merejkowsky <dimitri@dmerej.info>"]
packages = [{include = "ticket_office"}]

[tool.poetry.dependencies]
CherryPy = "^18.8.0"
python = "^3.8"
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
